--- a/index.html
+++ b/index.html
@@ -168,25 +168,25 @@
     <ul class="list-reset portfolio__list flex">
       <li class="portfolio__list-item">
         <a href="https://alexander-korotckevich.github.io/Blanchard/" class="portfolio__link flex" target="_blank">
-          <img class="portfolio__image" src="../img/blanchard.webp" alt="image">
+          <img class="portfolio__image" src="img/blanchard.webp" alt="image">
           <h3 class="portfolio__link-title">Blanchard</h3>
         </a>
       </li>
       <li class="portfolio__list-item">
         <a href="https://alexander-korotckevich.github.io/courses_market/" class="portfolio__link flex">
-          <img class="portfolio__image" src="../img/courses-market.webp" alt="image">
+          <img class="portfolio__image" src="img/courses-market.webp" alt="image">
           <h3 class="portfolio__link-title">Courses market</h3>
         </a>
       </li>
       <li class="portfolio__list-item">
         <a href="https://alexander-korotckevich.github.io/couple_game/" class="portfolio__link flex">
-          <img class="portfolio__image" src="../img/couple-game.webp" alt="image">
+          <img class="portfolio__image" src="img/couple-game.webp" alt="image">
           <h3 class="portfolio__link-title">Couple Game</h3>
         </a>
       </li>
       <li class="portfolio__list-item">
         <a href="https://alexander-korotckevich.github.io/crm__display/" class="portfolio__link flex">
-          <img class="portfolio__image" src="../img/crm.webp" alt="image">
+          <img class="portfolio__image" src="img/crm.webp" alt="image">
           <h3 class="portfolio__link-title">CRM interface</h3>
         </a>
       </li>
